create message test passed.